<?xml version="1.0"?>
<package format="2">
  <name>io_msgs</name>
  <version>1.0.0</version>
  <description>The io_msgs package</description>

  <maintainer email="io@io-ai.tech">Liu Xiyuan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
